--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.syl.androidart">
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
     <application
+        android:name=".config.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
