--- a/testmodule/src/main/AndroidManifest.xml
+++ b/testmodule/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".config.MyApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -16,7 +17,31 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity">
+        <activity
+            android:name=".activity.SecondActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:process=".progress2">
+            <intent-filter>
+                <action android:name="com.syl.main.a"/>
+                <action android:name="com.syl.main.b"/>
+
+                <category android:name="com.syl.category.c"/>
+                <category android:name="com.syl.category.d"/>
+
+                <data android:mimeType="text/plain"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.syl.main.e"/>
+
+                <category android:name="com.syl.category.f"/>
+
+                <data
+                    android:mimeType="text/plain"
+                    android:scheme="string"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".activity.ThirdActivity"
+                  android:process=".progress3">
         </activity>
     </application>
 
