--- a/testmodule/src/main/AndroidManifest.xml
+++ b/testmodule/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.syl.testmodule">
-
+    <!--设置权限(自定义权限:permission和uses-permission都要设置)-->
+    <permission android:name="com.syl.testmodule.permission.ACCESS_BOOK_MANAGER_SERVICE"
+                android:protectionLevel="normal"/>
+    <uses-permission android:name="com.syl.testmodule.permission.ACCESS_BOOK_MANAGER_SERVICE"/>
     <application
-        android:allowBackup="true"
         android:name=".config.MyApplication"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -40,9 +43,26 @@
                     android:scheme="string"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ThirdActivity"
-                  android:process=".progress3">
+        <activity
+            android:name=".activity.ThirdActivity"
+            android:process=".progress3">
         </activity>
+
+        <service
+            android:name=".service.MessengerService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":remote">
+        </service>
+        <service
+            android:name=".service.BookManagerService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":test_remote_book_manager">
+            <intent-filter>
+                <action android:name="com.syl.BOOK_MANAGER"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
