--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,13 @@
         </activity>
         <activity android:name=".activity.ContentActivity">
         </activity>
+        <!--从testModule中考过来的,忘记注册了,总是没有出现预料中的结果-->
+        <service
+            android:name=".service.BinderPoolService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
+        <activity android:name=".activity.BinderPoolActivity"/>
     </application>
 
 </manifest>
