--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -34,9 +34,15 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'//universalimageloader图片加载
-    compile 'com.facebook.fresco:fresco:0.9.0'//fresco图片加载
-    compile 'com.squareup.picasso:picasso:2.5.2'//picasso图片加载
-    compile 'com.github.bumptech.glide:glide:3.7.0'//glide图片加载
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    //universalimageloader图片加载
+    compile 'com.facebook.fresco:fresco:0.9.0'
+    //fresco图片加载
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    //picasso图片加载
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    //glide图片加载
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    //okhttp3
+    compile 'com.google.code.gson:gson:2.8.1'
 }
